ecmascript/parser/tests/test262-error-references/fail/dc431bcf293513a0.js.stderr
error: Unterminated string constant
 --> $DIR/tests/test262-parser/fail/dc431bcf293513a0.js:1:2
  |
1 | (')
  |  ^^

